--- a/docker/node/Dockerfile.dev
+++ b/docker/node/Dockerfile.dev
@@ -24,7 +24,7 @@ WORKDIR /var/project
 # RUN npm install cnpm -g --no-progress --registry=https://registry.npm.taobao.org
 
 # Install project dependencies and package
-RUN ls -la && npm install --no-progress && npm run build
+RUN ls -la && npm install --no-progress && npm run dev
 
 # production stage
 # Production environment base Nginx image (the image above has been packaged as a static file)
