--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue3-perfect-scrollbar": "^1.6.1",
     "vue3-select2-component": "^0.1.7",
     "vue3-toastify": "^0.2.1",
+    "vue3-ytframe": "^0.4.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
