--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "device-uuid": "^1.0.4",
     "feather-icons": "^4.28.0",
     "file-loader": "^6.2.0",
+    "flag-icons": "^7.2.1",
     "jquery": "^3.7.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "npm": "^10.5.1",
     "popper.js": "^1.16.1",
     "raphael": "^2.3.0",
     "sass-loader": "^11.0.1",
