--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ VUE_APP_BASE_URL=http://127.0.0.1:9000
 # Locale
 VUE_APP_DEFAULT_LOCALE=en
 VUE_APP_FALLBACK_LOCALE=ru
-VUE_APP_SUPPORTED_LOCALES=en,ru,tm,tr
+VUE_APP_SUPPORTED_LOCALES=en,ru,tm
 
 # Storage
 VUE_APP_STORAGE_URL=http://127.0.0.1:9000
