--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,15 +4,10 @@ services:
   node:
       container_name: ${COMPOSE_PROJECT_NAME}-admin
       build: 
-          context: ./node
-          dockerfile: Dockerfile
-      tty: true
+          context: ../
+          dockerfile: ./docker/node/Dockerfile
+          target: ${TARGET}
       ports:
         # - 3000:3000
-        # - 5173:5173
-        # - 5050:5050
-        # - 8081:8081
-        - "8080:8080"
-      volumes: 
-          - ../:/var/project
-      # command: ['npm', 'run', 'serve']   # ['npm', 'run', 'watch-poll']
+        - ${DEVELOP_PORT}:8080
+        - ${PRODUCTION_PORT}:80
