--- a/docker/node/project-nginx.conf
+++ b/docker/node/project-nginx.conf
@@ -1,6 +1,7 @@
 server {
-    listen 80;
-    # server_name _"; # localhost
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    # server_name _; # localhost
     root /usr/share/nginx/html;
     index index.html index.htm;
 
