--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ckeditor/ckeditor5-vue": "^5.1.0",
     "axios": "^1.6.5",
     "bootstrap": "5.2.3",
+    "centrifuge": "^5.2.2",
     "datatables.net-bs4": "^3.2.2",
     "datatables.net-dt": "^1.1.0",
     "device-uuid": "^1.0.4",
