Configured ws connection

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,7 @@
 NODE_ENV=production
 
 VUE_APP_API_SERVER_ENDPOINT=https://api.esse.academy
+VUE_APP_WS_SERVER_ENDPOINT=ws://ws.esse.academy
 
 # Locale
 VUE_APP_DEFAULT_LOCALE=en
