--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,7 @@
 NODE_ENV=development
 
 VUE_APP_API_SERVER_ENDPOINT=http://212.24.101.35:8088
+VUE_APP_WS_SERVER_ENDPOINT=ws://212.24.101.35:8000
 
 # Locale
 VUE_APP_DEFAULT_LOCALE=en
