--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 NODE_ENV=local # develop | production
 
 VUE_APP_API_SERVER_ENDPOINT=http://127.0.0.1:8088
+VUE_APP_WS_SERVER_ENDPOINT=ws://127.0.0.1:8000
 
 # Locale
 VUE_APP_DEFAULT_LOCALE=en
