University for foreign students

--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,8 @@
 NODE_ENV=production
 
 VUE_APP_API_SERVER_ENDPOINT=https://api.esse.academy
-VUE_APP_WS_SERVER_ENDPOINT=ws://ws.esse.academy
+VUE_APP_WS_SERVER_ENDPOINT=wss://31.131.17.136:8000
+# wss://ws.esse.academy
 
 # Locale
 VUE_APP_DEFAULT_LOCALE=en
